fix: use full Developer ID Application identity for macOS signing

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -40,7 +40,7 @@ mac:
   target:
     - dmg
   icon: resources/icon.icns
-  identity: "Brandon Bidwell (LN7B5DD54X)"
+  identity: "Developer ID Application: Brandon Bidwell (LN7B5DD54X)"
 
 linux:
   target:
