--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "totality",
-  "version": "0.1.8",
+  "version": "0.1.9-beta.0",
   "description": "Analyze media library quality and recommend upgrades",
   "main": "dist-electron/main/index.cjs",
   "scripts": {
